# generate-pull-request-description

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yaml  mkver.conf  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build-docker-image.yml  python-ci.yml  release.yml  update-pull-request.yml
generate_pull_request_description/: Dockerfile  compile_release_notes.py  entrypoint.sh  generate_pull_request_description.py
tests/: test_compile_release_notes.py
