[tool.poetry]
name = "generate-pull-request-description"
version = "1.0.0"
description = "A GitHub action that summarises the commits in a pull request for its description."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"
packages = [{include = "generate_pull_request_description"}]

[tool.poetry.scripts]
generate-pull-request-description = "generate_pull_request_description.generate_pull_request_description:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
